# modelseek

./: .gitignore  README.md  example.py  main.py  pyproject.toml
benchmark/: repository.py
core/: _automl.py  api.py  automl.py  runner.py
data/: domain.py  repository.py
examples/: bench.py
src/mlbenchmark/: _automl.py  api.py  domain.py  repository.py
src/modelfast/: _automl.py  _predictor.py  api.py  repository.py
src/modelseek/: _automl.py  api.py  repository.py
utils/: helpers.py
